--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,11 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent">
 
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/edittext"/>
+
     <Button
         android:id="@+id/btnActTwo"
         android:layout_width="wrap_content"
